Fix checkbox alignment issue for chrome/mobile devices

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -109,7 +109,7 @@ form {
   input {
     display: inline-block;
     float: right;
-    width: 0%;
+    width: 2%;
     margin-top: -1px; 
   } 
   span {
